--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+/.idea
+/gradle
+build.gradle
+gradle.properties
+gradlew
+gradlew.bat
+settings.gradle
